# error-paper

./: .gitignore  README.md  pyproject.toml
benchmarks/hosp-impact/: README.md
benchmarks/ic-baseline/: README.md
benchmarks/ml_downstream_experiments/: README.md
benchmarks/profiling/: README.md
downstream_experiments/: README.md
downstream_experiments/datasets/: download_datasets.py
downstream_experiments/generate_results/: classification_outlier_erroneous.py  classification_outlier_typo.py  classification_wrongunit_typo.py  regression_outlier_erroneous.py  regression_outlier_typo.py  regression_wrongunit_erroneous.py  regression_wrongunit_typo.py
downstream_experiments/visualization/: visualize_tab_err_downstream_results.ipynb
error_paper/: HOSP_dataset_analysis.ipynb  HOSP_dataset_generation.ipynb  cleaning_impact_dataset_generation.ipynb  dataset_analysis.ipynb  dataset_generation.ipynb  plots.ipynb  utils.py
export_data/beers/: beers_missing_ecar_0.csv  beers_missing_ecar_1.csv  beers_missing_ecar_2.csv  beers_missing_ecar_3.csv  beers_missing_ecar_4.csv  beers_missing_ecar_5.csv  beers_missing_ecar_6.csv  beers_missing_ecar_7.csv  beers_missing_ecar_8.csv  beers_missing_ecar_9.csv
export_data/bridges/: bridges_missing_ecar_0.csv  bridges_missing_ecar_1.csv  bridges_missing_ecar_2.csv  bridges_missing_ecar_3.csv  bridges_missing_ecar_4.csv  bridges_missing_ecar_5.csv  bridges_missing_ecar_6.csv  bridges_missing_ecar_7.csv  bridges_missing_ecar_8.csv  bridges_missing_ecar_9.csv
export_data/cars/: cars_missing_ecar_0.csv  (+9 more)
profiling/: README.md
(+987 files in other folders)
