[tool.poetry]
name = "error-paper"
version = "0.1.0"
description = ""
authors = ["Philipp Jung <philippjung@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"
pyarrow = "^16.1.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tab-err = "^0.1.1"
ipykernel = "^6.29.5"
memray = "^1.17.2"
openml = "^0.15.1"
psutil = "^7.0.0"
brokenaxes = "^0.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
